fix: layout on mobile

--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -9,6 +9,7 @@ section.task-list {
   
   header {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -20,9 +21,10 @@ section.task-list {
 
     .input-group {
       display: flex;
+      flex-wrap: wrap;
       gap: 0.25rem;
       align-items: center;
-
+      
       background: #fff;
       font-size: 16px;
       
